k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssgwoo-frontend
spec:
  selector:
    app: ssgwoo-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
