k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssgwoo-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.ssgwoo.com  #실제 도메인
      secretName: ssgwoo-frontend-tls
  rules:
    - host: www.ssgwoo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssgwoo-frontend
                port:
                  number: 80
